; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_dma.c_dma_update_txavail.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_dma.c_dma_update_txavail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_info = type { %struct.TYPE_4__, i32, i32, i64, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_info*)* @dma_update_txavail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dma_update_txavail(%struct.dma_info* %0) #0 {
  %2 = alloca %struct.dma_info*, align 8
  store %struct.dma_info* %0, %struct.dma_info** %2, align 8
  %3 = load %struct.dma_info*, %struct.dma_info** %2, align 8
  %4 = getelementptr inbounds %struct.dma_info, %struct.dma_info* %3, i32 0, i32 3
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.dma_info*, %struct.dma_info** %2, align 8
  %7 = load %struct.dma_info*, %struct.dma_info** %2, align 8
  %8 = getelementptr inbounds %struct.dma_info, %struct.dma_info* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.dma_info*, %struct.dma_info** %2, align 8
  %11 = getelementptr inbounds %struct.dma_info, %struct.dma_info* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @ntxdactive(%struct.dma_info* %6, i32 %9, i32 %12)
  %14 = sub nsw i64 %5, %13
  %15 = load %struct.dma_info*, %struct.dma_info** %2, align 8
  %16 = getelementptr inbounds %struct.dma_info, %struct.dma_info* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = call i64 @skb_queue_len(i32* %17)
  %19 = sub nsw i64 %14, %18
  %20 = sub nsw i64 %19, 1
  %21 = load %struct.dma_info*, %struct.dma_info** %2, align 8
  %22 = getelementptr inbounds %struct.dma_info, %struct.dma_info* %21, i32 0, i32 4
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  store i64 %20, i64* %23, align 8
  ret void
}

declare dso_local i64 @ntxdactive(%struct.dma_info*, i32, i32) #1

declare dso_local i64 @skb_queue_len(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
